--- a/Client/index.html
+++ b/Client/index.html
@@ -12,6 +12,8 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,600,0,0"
     rel="stylesheet" />
+    <script src="https://accounts.google.com/gsi/client" async></script>
+    
     <title>MedShop</title>
   </head>
   <body>
